2011-08-15 Borut Razem <borut.razem AT gmail.com>

	* sdcc-build-bootstrap.sh: fixed typo

2011-08-14 Borut Razem <borut.razem AT gmail.com>

	* lib/variables.mk: serach for local unix2dos
	* lib/variables.mk, lib/upload.mk: added DCFPORT
	* sdcc-build-bootstrap.sh: don't remove the build if uploading
	* local/derna.mk: x86 build on derna build machine
	* local/cf-x86.mk: disable x86 build
	* local/derna-i586-mingw32msvc.mk: i386 mingw build on derna

2011-08-10 Borut Razem <borut.razem AT gmail.com>

	* lib/doc-archive.mk:
	  sdcc development documentation moved from doc to sdcc wiki

2011-08-02 Borut Razem <borut.razem AT gmail.com>

	* components/sdcc.mk, lib/bootstrap.mk, lib/upload.mk, lib/fetch.mk:
	  added `date` outputs

2011-07-31 Borut Razem <borut.razem AT gmail.com>

	* sdcc-build/sdcc-build-bootstrap.sh: added "Lock released" message

2011-07-24 Borut Razem <borut.razem AT gmail.com>

	* local/cf-x86-i586-mingw32msvc.mk:
	  clear TARGETCCFLAGS and TARGETCXXFLAGS
	* local/mypants.mk, local/netbsd-i386.mk: fixed TARGETLDFLAGS

2011-07-23 Borut Razem <borut.razem AT gmail.com>

	* local/cf-x86.mk, local/cf-x86-i386-unknown-linux2.5.mk,
	  local/mypants.mk, local/dev.mk, local/mirror-doors.mk,
	  local/solaris-x86.mk, local/freebsd-i386.mk, local/netbsd-i386.mk:
	  local includes and libraries paths

2011-07-21 Borut Razem <borut.razem AT gmail.com>

	* local/dev.mk, local/solaris-x86.mk:
	  added TARGETCFLAGS and TARGETLSFLAGS
	* local/amd64-linux1.mk, local/openpower-linux1.mk, local/ppc-osx2.mk,
	  local/ppc-osx3.mk, local/sparc-solaris1.mk,
	  local/usf-cf-alpha-linux-1.mk, local/x86-linux2.mk,
	  local/x86-linux2-i586-mingw32msvc.mk: moved to local/old

2011-06-13 Borut Razem <borut.razem AT gmail.com>

	* local/dev.mk, local/solaris-x86.mk: use GCC compiler

2011-04-23 Borut Razem <borut.razem AT gmail.com>

	* lib/variables.mk: fixed UNIX2DOS for Solaris

2011-03-07 Borut Razem <borut.razem AT gmail.com>
