@@ -1,6 +1,8 @@
 2011-08-15 Borut Razem <borut.razem AT gmail.com>
 
 	* sdcc-build-bootstrap.sh: fixed typo
+	* components/sdcc.mk, lib/variables.mk:
+	  each target platform has it's own build irectory
 
 2011-08-14 Borut Razem <borut.razem AT gmail.com>
 
